# socketio_cpp

./: CMakeLists.txt  README.md  build.sh
benchmark/client/: main.py
benchmark/echo/: index.html  server.cc
example/: CMakeLists.txt
example/chat/: CMakeLists.txt  README.md  index.html  server.cc
example/chat/static/: main.js
example/echo/: CMakeLists.txt  README.md  server.cc
example/echo/static/: index.js
example/simple/: CMakeLists.txt  server.cc
lib/: CMakeLists.txt
lib/bytree/: CMakeLists.txt  ssl_util.hpp  string_util.hpp
lib/bytree/json/: json_codec.hpp  test.cc
lib/engineio/: CMakeLists.txt  packet.h  parser.cc  parser.h  server.cc  server.h  socket.cc  socket.h  transport.cc  transport.h
lib/engineio/base/: test  util.h
lib/engineio/transports/: polling.cc  polling.h  polling_jsonp.h  polling_xhr.cc  polling_xhr.h  transport_factory.h  websocket.cc  websocket.h
lib/jsoncpp/: CMakeLists.txt  jsoncpp.cpp  test  test.cc
lib/woody/http/: CMakeLists.txt  http_application.h  http_codec.cc  http_codec.h  http_handler.cc  http_handler.h  http_request.cc  http_request.h  http_server.cc  http_server.h
lib/woody/lib/http_parser/: CMakeLists.txt
lib/woody/websocket/: .websocket_server.h.swo  CMakeLists.txt  websocket_handler.cc  websocket_server.cc  websocket_server.h
socketio/: CMakeLists.txt  adapter.cc  adapter.h  callback.h  client.cc  client.h  namespace.cc  namespace.h  packet.h  parser.cc  parser.h  server.cc  server.h  socket.cc  socket.h
socketio/base/: json_util.h  string_util.h  util.h
