PROJECT(socketio)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_DEFINITIONS(-O3 -Wall -g)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/socketio)
#LINK_DIRECTORIES(/usr/local/lib/muduo)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(socketio)
ADD_SUBDIRECTORY(example)
#ADD_SUBDIRECTORY(test)

